--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "uuid": "^9.0.1",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -42,7 +43,6 @@
     "@types/uuid": "^9.0.7",
     "@types/sequelize": "^4.28.19",
     "tsx": "^4.7.0",
-    "sequelize-cli": "^6.6.2",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0"
   }
